--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -28,7 +28,7 @@ jobs:
         env:
             SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
             SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-        run: python dcf_v2.py
+        run: python main_v3.py
           
       - name: commit files
         run: |
