--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,39 +1,52 @@
-name: test_github
+name: Update trading view forecast
 
 on:
+  schedule:
+    - cron: '* * 20 * *'
+  
   workflow_dispatch:
+      
 
 jobs:
-  trigger_workflow:
+  build:
     runs-on: ubuntu-latest
+
     steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9 # Replace with your desired Python version
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r tv_requirements.txt # If you have any Python dependencies
+    - name: Installing package list
+      run: apt list --installed    
+    - name: Removing previous chrome instances on runner 
+      run: sudo apt purge google-chrome-stable  
 
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9' # install the python version needed
+    - name: Installing all necessary packages
+      run: pip install chromedriver-autoinstaller selenium pyvirtualdisplay
+    - name: Install xvfb
+      run: sudo apt-get install xvfb
+    - name: Run Python Script
+      env:
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      run: python tv_scrape.py
+   
+    - name: commit files
+      run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add -A
+          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
           
-      - name: install python packages
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r tv_requirements.txt
-
-      - name: execute ms_updater.py script
-        run: python test.py
-      
-      - name: Commit and Push Changes
-        run: |
-          if [[ -n $(git status -s) ]]; then
-            git config --global user.name "github-actions[bot]"
-            git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add -A
-            git commit -m "GitHub Actions Results added"
-            git push-m "Saving data to csv due to error in ms_updater.py"
-            git push
-          else
-            echo "No changes to commit."
-          fi
-          
+    - name: push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main 
