--- a/.github/workflows/trading_view_action.yml
+++ b/.github/workflows/trading_view_action.yml
@@ -2,7 +2,7 @@ name: Update trading view forecast
 
 on:
   schedule:
-    - cron: '* * 20 * *'
+    - cron: '0 0 1 1,4,7,10 *'
   
   workflow_dispatch:
       
